src/objects/MTM_Alert_Template__mdt.object
<CustomObject>
    <fields>
        <fullName>Id_Template__c</fullName>
        <label>Id Template</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>it</fullName>
                </value>
                <value>
                    <fullName>en</fullName>
                </value>
                <value>
                    <fullName>zh</fullName>
                </value>
                <value>
                    <fullName>ja</fullName>
                </value>
                <value>
                    <fullName>ru</fullName>
                </value>
                <value>
                    <fullName>de</fullName>
                    <isActive>false</isActive>
                    <label>de</label>
                </value>
                <value>
                    <fullName>es</fullName>
                    <isActive>false</isActive>
                    <label>es</label>
                </value>
                <value>
                    <fullName>fr</fullName>
                    <isActive>false</isActive>
                    <label>fr</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Step__c</fullName>
        <label>Step</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>1</label>
                </value>
                <value>
                    <fullName>1.2</fullName>
                </value>
                <value>
                    <fullName>1.3</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>2.2</fullName>
                </value>
                <value>
                    <fullName>2.3</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>MTM Alert Template</label>
    <pluralLabel>MTM Alert Templates</pluralLabel>
</CustomObject>